Starting Risdal tutorial

--- a/RisdalTitanicTutorial.Rmd
+++ b/RisdalTitanicTutorial.Rmd
@@ -81,7 +81,11 @@ full$Family <- paste(full$Surname, full$Fsize, sep='_')
 Y ahora vamos a ver cómo se distribuye la tasa de sobrevivientes y muertos según el número de familiares que fuesen a bordo:
 
 ```{r}
-ggplot(full[1:891,], aes(x = Fsize, fill = factor(Survived)))
+ggplot(full[1:891,], aes(x = Fsize, fill = factor(Survived))) +
+  geom_bar(stat='count', position='dodge') +
+  scale_x_continuous(breaks=c(1:11)) +
+  labs(x = 'Family Size') +
+  theme_few()
 ```
 
 
