--- a/memoria.tex
+++ b/memoria.tex
@@ -84,4 +84,6 @@ A modo de ejercicio lo que he hecho ha sido generar simplemente una predicción 
 
 Tras el tutorial de Riscal pos \textbf{989} accuracy \textbf{0.80383}
 
+Tras aplicar Xgboost al dataset de Riscal \textbf{0.77990}.
+
 \end{document}
