--- a/memoria.tex
+++ b/memoria.tex
@@ -52,9 +52,62 @@
 \renewcommand\figurename{Figura} %Cambiar el nombre de las tablas
 \renewcommand{\contentsname}{Índice} %Cambiar el nombre de la ToC
 
+\usepackage{pdfpages}
+
 \begin{document}
 \maketitle
+
+\begin{center}
+  \textbf{Nombre del equipo: }Gustavo Rivas Gervilla\\
+  \textbf{Ranking global: }TODO\\
+  \textbf{Puntuación: }TODO
+\end{center}
+
+\newpage
+
+\tableofcontents
+
+\newpage
+
+\section{Introducción}
+
+En este trabajo se va a trabajar con el dataset del Titanic, un conjunto de datos en el que se plantea un \textbf{problema de clasificación}, dadas una serie de características de un pasajero, que enumeraremos en la siguiente sección, se tendrá que decidir si el pasajero sobrevivió o no a la catastrofe. En primer lugar, como toma de contacto con el dataset y también para tomar algunas ideas que aplicar al conjunto de datos, se han realizado dos tutoriales con planteamientos similares, ambos realizan un preprocesamiento parecido a los datos y emplean Random Forest como algoritmo final de clasificación, después de probar otros modelos como puede ser uno basado en un árbol de decisión o simplemente suponer que todas las mujeres sobrevivieron y que todos los hombres perecieron. La realización de estos dos tutoriales se adjunta en esta memoria a modo de apéndices.\\
+
+\section{Exploración de datos}
+
+En primer lugar vamos a presentar el conjunto de datos que tenemos, disponemos de 891 instancias en el conjunto de entrenamiento y 418 en el conjunto de test. Estas instancias presentan el siguiente conjunto de atributos:
+
+\begin{enumerate}
+\item \textbf{PassengerId: } identificador del pasajero.
+\item \textbf{Pclass: } la clase en la que embarcó.
+\item \textbf{Name:} el nombre del pasajero.
+\item \textbf{Sex: } sexo del pasajero.
+\item \textbf{Age: } edad del pasajero.
+\item \textbf{SibSp: } número de hermanos/esposos/esposas del pasajero que viajaban también a bordo.
+\item \textbf{Parch: } número de padres/hijos del pasajero que viajaban también a bordo.
+\item \textbf{Ticket: } número o identificador del ticket de embarque del pasajero.
+\item \textbf{Fare: } lo que pagó el pasajero por su pasaje.
+\item \textbf{Cabin: } camarote(s) en el(los) que viajó el pasajero.
+\item \textbf{Embarked: } puerto desde el que embarcó. C = Cherbourg, Q = Queenstown, S = Southampton.
+\item \textbf{Survived: } el pasajero murió (0) o sobrevivió (1). La variable a predecir y que por tanto no está presente en las intancias del conjunto de test.
+\end{enumerate}
+
+Lo primero que hemos hecho ha sido estudiar si contábamos con valores perdidos. Gracias a los tutoriales notamos que hay algunos atributos que, si bien no presentan valores perdido (\textbf{NA}), contienen una cadena vacía lo que se podría considerar también un valor perdido, y por lo tanto esto también se tendrá en cuenta en la fase de preprocesamiento. Tras este análisis vemos que la mayoría de valores perdidos están en el atributo \textbf{Age}, también hay algún valor perdido en el \textbf{Embarked} y en \textbf{Cabin}.\\
+
+Vamos a ver ahora la primera gráfica sobre nuestro conjunto de datos, lo que vamos a reflejar en esta gráfica es el desequilibrio entre las dos clases (549 muertos y 342 sobrevivientes), aunque no se trata de un desequilibrio demasiado grande lo trataremos en la fase de preprocesamiento y trataremos de comparar distintas técnicas de balanceo de clases según su rendimiento para un algoritmo determinado:
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{imgs/imbalanced}
+  \caption{Desbalanceo entre clases}
+\end{figure}
+
+En la gráfica anterior también mostramos en qué proporción sobreviven hombres y mujeres en el conjunto de entrenamiento. Como podemos ver son las mujeres las que en su mayoría sobrevivieron mientras que los hombres tuvieron menos posibilidades, recordemos que durante el accidente del Titanic se estableció la política de evacuar a mujeres y niños en primer lugar con lo que esta gráfica parece acorde a ello. Este hecho nos lleva, en el tutorial de Trevor Stephens, a plantear el modelo sexista.
+\appendix
+
 \section{Tutorial ``Exploring Survival on the Titanic'' de Megan Risdal}
+
+%\includepdf[pages=-]{StephensTitanicTutorial}
 
 A modo de introducción tanto al dataset como a la plataforma Kaggle vamos a realizar este tutorial que nos servirá para dar una primera solución al problema que se nos plantea con este dataset. También, y simplemente por conocer esta herramienta, se ha optado por realizar este tutorial desarrollando un aplicación web Shiny. El fichero tiene extensión de Rmarkdown, algo que ya he usado, con lo cual no debería ser muy complicado usar esta utilidad que ofrece Rstudio.
 
